deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2   
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx  
    spec:
      containers:   
      - name: cont1
        image: manishbaleraochoudary/phpapp:appimage
        ports:
        - containerPort: 80


        #configmap Integration
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m" 

        livenessProbe:
          httpGet:
           path: /
           port: 80 
           initialDelaySeconds: 30  
           periodSeconds: 10
        readinessProbe:
          httpGet:  
           path: /
           port: 80 
           initialDelaySeconds: 30 
           periodSeconds: 5
