statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysqldb
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
      - name: dbcont
        image: manishbaleraochoudary/phpapp:dbimage
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - name: pvc-1
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: pvc-1
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp2
      resources:
        requests:
          storage: 2Gi
