db-svc.yml
---
apiVersion: v1
kind: Service
metadata:   
  name: mysql-db
spec:
  ClusterIP: None
  selector:
    app: app-database 
  ports:
      port: 3306
      targetPort: 33006
